# Reality.os

./: ?cargoenv-research-policy.v1  Cargo.toml  Data-Flow.mmd  Security-Model.mmd  bostrom-sovereign-kernel-v2.ndjson  docs  policy-newrow-shark.aln  realityos.policy.newrow-shark.v1.aln  xr-node.realityos.cyberswarm.v1.aln
$(pwd)/: nanoswarm_voice_logic.mai  voice_comm_ledger.rules  voice_comm_secure_interface.sai
.github/workflows/: biospectre-neuropc-pipeline.yml  neurorights-firewall.yml
Reality.os/: Cargo.toml  README.md
Reality.os/core/: Cargo.toml
Reality.os/core/src/: lib.rs  manifest.rs  project.rs  repo.rs  target.rs
Reality.os/tools/reality-lab-cli/: Cargo.toml
Reality.os/tools/reality-lab-cli/src/: main.rs
Reality.os/tools/reality-orchestrator/: Cargo.toml
Reality.os/tools/reality-orchestrator/src/: main.rs  manifest_loader.rs  pipeline.rs
Reality.os/xr-dream/reality-os/dream-primitives/v1/: Cargo.toml
Reality.os/xr-dream/reality-os/dream-primitives/v1/src/: lib.rs
aln/: xr-benchmark.phoenix.reference.v1.aln  xr-grid.agent-dev-tunnels.v2.aln  xr-grid.quantum-roaming-debug.v1.aln  xr.blink.corridor.v1.aln  xr.chat.grammar.v1.aln  xr.corridor.host.v1.aln  xr.corridor.session.v1.aln  xr.device.capability.v1.aln  xr.evidence.policy.v1.aln  xr.guard.metrics.v1.aln  xr.multimodal.budget.v1.aln  xr.neurorights.v1.aln  xr.stack.retrievals.v1.aln
bioscale/audit/: bioscale_fairness_audit.aln.rs
bioscale/firewall/: bioscale_rights_core.aln.rs
bioscale/token/: bioscale_token_dynamics.aln.rs
biospectre-brain-tokens/src/: neural_rope.rs  scheduler.rs  tokens.rs
biospectre-core/src/: asset_eco_governor.rs  cargo_env_descriptor.rs  did_verification.rs  lifeforce_governor.rs
biospectre-realityos/src/: eco_governor_integration.rs  main.rs
brainprint-core/src/: lib.rs
config/realityos/: eco_governor.toml
core/: Cargo.toml
core/cybernano/src/compliance/: cybernano_compliance.cpp
core/sovereigntycore/include/telemetry/: sabotage_detector.h
core/sovereigntycore/policies/: evolution_guard.lua  sabotage_detector.lua
core/sovereigntycore/src/guards/: sabotage_detector.rs
core/sovereigntycore/src/telemetry/: sabotage_detector.cpp
core/src/: events.rs  karma.rs  lib.rs  platform.rs  policy.rs  types.rs  util.rs
core/src/policy/: bill_of_rights.rs
crates/biospectre-biophysical-shell/: build.rs
crates/cargoenv-research-policysrc/: lib.rs
crates/sigstore-verifier/: Cargo.toml
crates/sigstore-verifier/src/: bundle.rs  main.rs  proof.rs
cyb.ai/particles/: payment-security-conversion.aai
cyb.ai/policy/: compliance-checklist.aln
cyb.ai/scripts/: cross-system-diagnostics.rs
cyberswarm-neuro/src/: upgrades.rs
db/migrations/: 001_create_virus_signature.sql
docs/: Architecting Provably Safe Augmentation_ A Technical Framework for Biocompatibility-Layers, Auditable Upgrades, and Hybrid Malware Defense.md  Filename_ cyberswarm_biosecure_mesh_orchestrator.r (1).md  From ALN Schema to Law_ Implementing a PSG-Grounded, Neurorights-Compliant XR-Grid Architecture.md  Qwen__20260125_5mcnqumes.txt  README.md  This research focuses on generalizing the mathemat.md  What are root-causes for biophysical-ejection for (1).md  Your abstract is already consistent with the exist.md  dream_ai_n1n2_automation.md
dream_spectre/tools/: invariant_harness.rs
dreamscape_os/src/: consciousness_session.rs
eco/: Cargo.toml
eco/src/: credit.rs  lib.rs  shapley.rs
evo/: VampyricAdoption.evo.bostrom-main.v1.aln  VampyricAdoption.evo.schema.v1.aln
governance/: Invoke-PSGovHealthCheck.ps1  Invoke-RealityOsGovernanceHealth.ps1
identity/: Cargo.toml
identity/src/: lib.rs
infra/dream_spectre/: invariant_integration_harness.js
ledger/: Cargo.toml
ledger/src/: lib.rs
microsocietyline/src/: microsoul.rs
network/dev-id-registry/: neuromorphic_device_registry.aln
neurotech/adaptive-tuning/: progressive_alignment_protocol.aln
neurotech/ar-vr-drone-control/: neuromorphic_spy_drone.aln
neurotech/energy-optimization/: power_recirculator.aln
neurotech/upgrade-protocols/: neurocyber_upgrade_sanitized.aln  safe_neurocyber_upgrade.aln
newrow_shark_guard/src/: lib.rs
oicl-vc-core/src/: aln_bindings.rs  did.rs  lib.rs  types.rs  vc.rs
policy/: nature-tokens.aln
qpudatashards/particles/: BioscaleNeuromotorEco2026v1.aln  BioscaleRealityOSWorkflow2026v1.aln  NeuralIntentEcoSchema2026v1.aln  NeuroHostBudget2026v1.aln  OrganicVirusSignaturesPhoenix2026v1.aln  RealityOS5DLifeforceSchema2026v1.aln  RealityOSHostBudgetWin10v1.aln  biophysical_missing_layers_profile.aln  biophysical_token_profile.aln  bioscale-runner-harness.aln  eco_upgrade_profile_v1.aln  lifeforce_curve_profile_v1.aln  organic.virus.signature.schema.v1.aln  reality-os-spec.v1.aln  reality-os-swarm-policy.v1.aln  xr-dev.policy-newrow-shark.v1.aln
qpudatashards/policies/: CryptoPostureCorridor-Phoenix2026v1.aln
reality-os/: host-biosphere-api.js  ota-neuromorph.js
reality.os/: main.aln
reality_os/src/: automagic_bio_feedback.rs
reality_os_portal/: README.md  vite.config.ts
reality_os_portal/docs/: ARCHITECTURE.md  FILE_SUMMARY.md
reality_os_portal/public/: sw.js
reality_os_portal/src/: App.tsx
realityos/global-controller/: adaptive_risk_alignment.aln
research/neuromorphic-audio/: neuromorphic_morse_decoder.aln
security/regex-protocols/: safe_regex_blocker.aln
src/: anger_discipline.rs  reality_os_reversal.rs
src/analysis/: anger_discipline.rs
src/anger_discipline/: metrics.rs  policy.rs
src/bioscale/: core.rs
src/chain/: host_node.rs
uver_resurrection_engine/: Cargo.toml
uver_resurrection_engine/src/: datalake_validator.rs  main.rs  model.rs  registry.rs  resurrection.rs  truth_ledger.rs
(+109 files in other folders)
