[package]
name = "reality_os"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "core",
    "eco",
    "identity",
    "ledger",
]

[dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
statrs = "0.16"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
anyhow = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
