[package]
name = "reality_eco"
version = "0.1.0"
edition = "2021"

[dependencies]
reality_core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
statrs = "0.16"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
