[package]
name = "reality-lab-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
reality-core = { path = "../../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
