[package]
name = "reality-orchestrator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
reality-core = { path = "../../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
anyhow = { workspace = true }
directories = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
git2 = { workspace = true }
url = { workspace = true }
toml = { workspace = true }
